--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- Header  and logo -->
   <div class="header">
-    <div class="title">Explore Saudi Heritage</div>
+    <div class="title">SAUDI HERITAGE EXPLORER</div>
     <img src="Images/logo.png" alt="Logo" class="logo" />
   </div>
 
@@ -71,19 +71,18 @@
       <div id="welcomeScreen">
         <h2>Welcome to Saudi Heritage Explorer</h2>
         <p>
-          Saudi Arabia is a land of rich culture, timeless traditions, and breathtaking historic sites.
-          From the birth of ancient civilizations to the flourishing of trade, architecture, and community,
-          the Kingdom has always stood as a crossroads of cultures and a beacon of heritage.
+            
         </p>
         <p>
-          This platform is dedicated to celebrating the stories embedded in the stones of Diriyah,
-          the carved tombs of AlUla, and the timeless streets of Al-Balad.
-          Each location reflects a unique era and identity that shaped the nation's soul.
+          Discover Saudi Arabia’s rich culture, timeless traditions, and historic treasures — from Diriyah to AlUla to Al-Balad — each telling the story of a nation’s soul
         </p>
         <p>
-          Through this experience, we invite you to step into the past, understand its impact on the present,
-          and appreciate the preservation of heritage that continues to inspire generations.
-          Let the journey through Saudi history enrich your knowledge and deepen your cultural connection.
+          
+
+
+        </p>
+        <p>
+   
         </p>
       </div>
     </div>
