--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <!-- Welcome Screen -->
       <div id="welcomeScreen">
-        <h2>Welcome to Saudi Heritage Explorer</h2>
+        <h2>Welcome to<br><span class="main-title">Saudi Heritage Explorer</span></h2>
         <p>
             
         </p>
